--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -4,7 +4,7 @@
 
 <h2><%=title%></h2>
   	<h5>Photo of me:</h5>
-  	<div class="https://th.bing.com/th/id/OIP.AwDJ_uZpjMuKDHx7NZly1AHaD5?w=317&h=180&c=7&r=0&o=5&dpr=1.25&pid=1.7">This is me </div>
+  	<div class="https://th.bing.com/th/id/OIP.qgHhp7xaHK1xknZMDS43gAHaDt?w=335&h=175&c=7&r=0&o=5&dpr=1.25&pid=1.7">Hello </div>
   <div>
   <img src=https://th.bing.com/th/id/OIP.AwDJ_uZpjMuKDHx7NZly1AHaD5?w=317&h=180&c=7&r=0&o=5&dpr=1.25&pid=1.7">
  </div> 
@@ -13,11 +13,11 @@
 	</div>
 	<div class="col-sm-8">
   	<h2>TITLE HEADING</h2>
-  	<h5>Title description, Dec 7, 2020</h5>
+  	<h5>Title description, Aug 16, 2022</h5>
   	<div class="fakeimg">Fake Image</div>
     
   	<p>Some text..</p>
-  	<p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+  	<p>My Three Favorite Things are Music, soccer, and dog. Music is my life and it keeps me going in every way you can imagine. My favorite type of music is R&B. When I wake up in the morning, the first thing I do is blast my music loud. It wakes me up, even when I don't feel like getting up. Playing soccer all started with me watching Christiano Rolando. He became an even bigger inspiration to me when the movie "Ronaldo" came out.</p>
 
  
 
