--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -8,15 +8,17 @@
   <div>
   <img src=https://th.bing.com/th/id/OIP.AwDJ_uZpjMuKDHx7NZly1AHaD5?w=317&h=180&c=7&r=0&o=5&dpr=1.25&pid=1.7">
  </div> 
-  	<p>Some text about me in culpa qui officia deserunt mollit anim..</p>
+  	<p></p>
 
 	</div>
 	<div class="col-sm-8">
   	<h2>TITLE HEADING</h2>
-  	<h5>Title description, Aug 16, 2022</h5>
-  	<div class="fakeimg">Fake Image</div>
+  	<h5>Title , Aug 16, 2022</h5>
+  	<div class="https://th.bing.com/th/id/OIP.Y_9rw5b0X0gfUyiUdphsZgHaHa?w=171&h=180&c=7&r=0&o=5&dpr=1.25&pid=1.7">.</div>
+    <img src=https://th.bing.com/th/id/OIP.Y_9rw5b0X0gfUyiUdphsZgHaHa?w=171&h=180&c=7&r=0&o=5&dpr=1.25&pid=1.7">
     
-  	<p>Some text..</p>
+    
+  
   	<p>My Three Favorite Things are Music, soccer, and dog. Music is my life and it keeps me going in every way you can imagine. My favorite type of music is R&B. When I wake up in the morning, the first thing I do is blast my music loud. It wakes me up, even when I don't feel like getting up. Playing soccer all started with me watching Christiano Rolando. He became an even bigger inspiration to me when the movie "Ronaldo" came out.</p>
 
  
