--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -27,6 +27,10 @@
   	<li class="nav-item">
     	<a class="nav-link" href="/">Home</a>
   	</li>
+
+    <li class="nav-item">
+    	<a class="nav-link" href="/users">Users</a>
+  	</li>
   	<li class="nav-item">
     	<a class="nav-link" href="sport">Favorite Sport</a>
   	</li>
